--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ ga('send', 'pageview');
 		<p>I have received generous support from CSIRO, DST Group, UNSW and SUTD.</p>
 
 		
-		<p>My research interests focuses on <b>AI-based Data-driven Techniques for Computational Design, Graphics and Vision</b>, especially about Urban Modelling and Percpetion.			
+		<p>My research focuses on <b>AI-based Data-driven Techniques for Computational Design, Graphics and Vision</b>, especially about Urban Modelling and Percpetion.			
 		
 		<!--<p>*Please check <a href=recruit.html>this</a> out if you are interested in joining our team.</p>-->
 
