Update team page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ ga('send', 'pageview');
 	<script src="js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 
 
-    <title>Tian (Frank) Feng</title>
+    <title>Tian (Frank) FENG</title>
   </head>
 
 <body>
@@ -50,16 +50,16 @@ ga('send', 'pageview');
 
       <div id="header">
         <!--h1 id="logo"><a href="#" title="#">yourweb<span>.com</span></a></h1-->
-        <h1 id="logo"><a href="index.html" title="Home">Frank Feng</span></a></h1>
+        <h1 id="logo"><a href="index.html" title="Home">Frank FENG</span></a></h1>
         <hr class="noscreen" />
 
         <div id="navigation">
         <ul>
           <li><a href="index.html" title="Home">HOME</a></li>
-<!--
-          <li><a href="group.html" title="Group">GROUP</a></li>
-          <li><a href="research.html" title="Research">RESEARCH</a></li>
-          <li><a href="service.html" title="Services">SERVICES</a></li>
+
+          <li><a href="team.html" title="Team">TEAM</a></li>
+          <li><a href="cn/index.html" title="Research">中文版</a></li>
+<!--          <li><a href="service.html" title="Services">SERVICES</a></li>
           <li><a href="teaching.html" title="Teaching">TEACHING</a></li>
           <li><a href="honors.html" title="Honors">HONORS</a></li>	  
           <li><a href="demo.html" title="Demo">DEMOS</a></li>
@@ -100,7 +100,7 @@ ga('send', 'pageview');
 				<td>
 				<tr>
 					<span style="border-collapse:separate">
-					<div style="display:block;text-align:left"><strong><font size="4">Tian (Frank) Feng</font></strong></div>
+					<div style="display:block;text-align:left"><strong><font size="4">Tian (Frank) FENG</font></strong></div>
 					<div style="display:block;text-align:left"><font size="font-size:small">Lecturer (Assistant Professor)</font></div>
 					<div style="display:block;text-align:left"><span style="font-size:small"><a href="https://www.latrobe.edu.au/computer-science-and-information-technology/" style="text-decoration:underline" target="_blank" rel="nofollow">Department of Computer Science and Information Technology</a></span></div>
 					<div style="display:block;text-align:left"><span style="font-size:small"><a href="https://www.latrobe.edu.au/school-engineering-and-mathematical-sciences/" style="text-decoration:underline" target="_blank" rel="nofollow">School of Engineering and Mathematical Sciences</a></span></div>
@@ -132,12 +132,11 @@ ga('send', 'pageview');
 		</tr>
 		</table>
 
-		<h6>Short Bio</h6>
-		<p>I am now serving as a Lecturer (Assistant Professor) in Interactive Digital Media at <a href="https://www.latrobe.edu.au/">La Trobe University</a>, Australia. Before joining La Trobe, I was a Postdoctoral Fellow at <a href="http://epicentre.matters.today/" target="_blank" rel="nofollow">the Expanded Perception and Interaction Centre (EPICentre)</a>, <a href="http://epicentre.matters.today/" target="_blank" rel="nofollow">UNSW</a>, under supervision of Prof <a href="http://tomaszbednarz.net/" target="_blank" rel="nofollow">Tomasz Bednarz</a>. I earned my PhD degree in Information Systems Technology and Design from <a href="https://www.sutd.edu.sg/" target="_blank" rel="nofollow">Singapore University of Technology and Design (SUTD)</a>, where I was advised by Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit Yeung</a> and co-advised by  Prof <a href="https://craigyuyu.github.io/home/index.html" target="_blank" rel="nofollow">Lap-Fai Yu</a>. I received my BSc degree in GIS from <a href="https://www.zju.edu.cn/english/" target="_blank" rel="nofollow">Zhejiang University (ZJU)</a>. I was a visiting scholar at <a href="https://www.umb.edu/" target="_blank" rel="nofollow">UMass Boston</a> during my PhD study. At the moment, I am also a visiting scientist at <a href="https://www.data61.csiro.au/" target="_blank" rel="nofollow">CSIRO's Data61</a>.</p>
+		<!--<h6>Short Bio</h6>-->
+		<p>I am now serving as a Lecturer (Assistant Professor) in Interactive Digital Media at <a href="https://www.latrobe.edu.au/">La Trobe University</a>, Australia. Before joining La Trobe, I was a Postdoctoral Fellow at <a href="http://epicentre.matters.today/" target="_blank" rel="nofollow">the Expanded Perception and Interaction Centre (EPICentre)</a>, <a href="http://epicentre.matters.today/" target="_blank" rel="nofollow">UNSW</a> and a visiting scientist at <a href="https://www.data61.csiro.au/" target="_blank" rel="nofollow">CSIRO's Data61</a>. I earned my PhD degree in Information Systems Technology and Design from <a href="https://www.sutd.edu.sg/" target="_blank" rel="nofollow">Singapore University of Technology and Design (SUTD)</a>, where I was advised by Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit Yeung</a> and co-advised by  Prof <a href="https://craigyuyu.github.io/home/index.html" target="_blank" rel="nofollow">Lap-Fai Yu</a>. I received my BSc degree in GIS from <a href="https://www.zju.edu.cn/english/" target="_blank" rel="nofollow">Zhejiang University (ZJU)</a>. I was a visiting scholar at <a href="https://www.umb.edu/" target="_blank" rel="nofollow">UMass Boston</a> during my PhD study.</p>
 
-		<p>I have received generous support from CSIRO, DST Group, UNSW and SUTD.</p>
+		<p>I received generous support from CSIRO, DST Group, UNSW and SUTD.</p>
 
-		
 		<p>My research focuses on <b>AI-based Data-driven Techniques for Computational Design, Graphics and Vision</b>, especially about Urban Modelling and Percpetion.			
 		
 		<!--<p>*Please check <a href=recruit.html>this</a> out if you are interested in joining our team.</p>-->
@@ -148,7 +147,7 @@ ga('send', 'pageview');
 		<span>I will present our CVPR paper, "Shading-based Shape Refinement of RGB-D images at CVPR'13"</span><br />
 		</div-->
 
-		<h6>What's New?</h6>
+		<h6>News</h6>
 <!--
 		<ul class="noindent">
 		  <li>Our paper <a href="http://www.scenenn.net" target="_blank" rel="nofollow" style="text-decoration: none">"SceneNN: a Scene Meshes Dataset with aNNotations"</a> has been conditionally accepted as an Oral Paper by <b>3DV 2016</b>. 
