Update team page

--- a/team.html
+++ b/team.html
@@ -58,8 +58,8 @@ ga('send', 'pageview');
 	          <li><a href="index.html" title="Home">HOME</a></li>
 
 	          <li><a href="team.html" title="Team">TEAM</a></li>
-	          <li><a href="cn/index.html" title="Research">中文版</a></li>
-	<!--          <li><a href="service.html" title="Services">SERVICES</a></li>
+	<!--	          <li><a href="cn/index.html" title="Research">中文版</a></li>
+	          <li><a href="service.html" title="Services">SERVICES</a></li>
 	          <li><a href="teaching.html" title="Teaching">TEACHING</a></li>
 	          <li><a href="honors.html" title="Honors">HONORS</a></li>	  
 	          <li><a href="demo.html" title="Demo">DEMOS</a></li>
@@ -79,7 +79,7 @@ ga('send', 'pageview');
 	  		<table style="text-align:left">
 	    		<tr>
 				    <td width=150px><img border="0" src="media/yunzhan.jpg" width=100px /></td>
-				    <td valign="Top"><b>Yunzhan ZHOU</b></td>
+				    <td valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br>La Trobe University<br>Co-supervised with Prof <a href="https://scholars.latrobe.edu.au/display/bduh" target="_blank" rel="nofollow">Henry Du</a><br><br>09/2019 - Present</td>
 				    <td width=150px></td>
 				    <td valign="Top"></td>
 				</tr>
@@ -92,9 +92,9 @@ ga('send', 'pageview');
 	  		<table style="text-align:left">
 	    		<tr>
 				    <td width=150px><img border="0" src="media/gang.jpg" width=100px /></td>
-				    <td valign="Top"><b>Gang YU</b></td>
+				    <td valign="Top"><b>Gang YU</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
 				    <td width=150px><img border="0" src="media/yawen.jpg" width=100px /></td>
-				    <td valign="Top"><b>Yawen ZHENG</b></td>
+				    <td valign="Top"><b>Yawen ZHENG</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
 				</tr>
 			</table>
 
