--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ ga('send', 'pageview');
           <li><a href="index.html" title="Home">HOME</a></li>
 
           <li><a href="team.html" title="Team">TEAM</a></li>
-          <li><a href="cn/index.html" title="Research">中文版</a></li>
-<!--          <li><a href="service.html" title="Services">SERVICES</a></li>
+<!--          <li><a href="cn/index.html" title="Research">中文版</a></li>
+          <li><a href="service.html" title="Services">SERVICES</a></li>
           <li><a href="teaching.html" title="Teaching">TEACHING</a></li>
           <li><a href="honors.html" title="Honors">HONORS</a></li>	  
           <li><a href="demo.html" title="Demo">DEMOS</a></li>
