--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@ ga('send', 'pageview');
   		</div>
 
     	<div id="main">
-    		It is my great pleasure to work with a team of passionate, talented, creative and reliable researchers.
+    		It is my great pleasure to work with a research team full of passion, talent and creativity.
 
 			<h6>PhD Student</h6>
 
