--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ ga('send', 'pageview');
 		<!--<h6>Short Bio</h6>-->
 		<p>I am now serving as a Lecturer (Assistant Professor) in Interactive Digital Media at <a href="https://www.latrobe.edu.au/">La Trobe University</a>, Australia. Before joining La Trobe, I was a Postdoctoral Fellow at <a href="http://epicentre.matters.today/" target="_blank" rel="nofollow">the Expanded Perception and Interaction Centre (EPICentre)</a>, <a href="http://epicentre.matters.today/" target="_blank" rel="nofollow">UNSW</a> and a visiting scientist at <a href="https://www.data61.csiro.au/" target="_blank" rel="nofollow">CSIRO's Data61</a>. I earned my PhD degree in Information Systems Technology and Design from <a href="https://www.sutd.edu.sg/" target="_blank" rel="nofollow">Singapore University of Technology and Design (SUTD)</a>, where I was advised by Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit Yeung</a> and co-advised by  Prof <a href="https://craigyuyu.github.io/home/index.html" target="_blank" rel="nofollow">Lap-Fai Yu</a>. I received my BSc degree in GIS from <a href="https://www.zju.edu.cn/english/" target="_blank" rel="nofollow">Zhejiang University (ZJU)</a>. I was a visiting scholar at <a href="https://www.umb.edu/" target="_blank" rel="nofollow">UMass Boston</a> during my PhD study.</p>
 
-		<p>I received generous support from CSIRO, DST Group, UNSW and SUTD.</p>
+		<!--<p>I received generous support from CSIRO, DST Group, UNSW and SUTD.</p>-->
 
 		<p>My research focuses on <b>AI-based Data-driven Techniques for Computational Design, Graphics and Vision</b>, especially about Urban Modelling and Percpetion.			
 		
