--- a/team.html
+++ b/team.html
@@ -74,14 +74,16 @@ ga('send', 'pageview');
     	<div id="main">
     		It is my great pleasure to work with a research team full of passion, talent and creativity.
 
-			<h6>PhD Student</h6>
+			<h6>PhD Students</h6>
 
 	  		<table style="text-align:left">
 	    		<tr>
 				    <td width=150px><img border="0" src="media/yunzhan.jpg" width=100px /></td>
-				    <td valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br>La Trobe University<br>Co-supervised with Prof <a href="https://scholars.latrobe.edu.au/display/bduh" target="_blank" rel="nofollow">Henry Du</a><br><br>09/2019 - Present</td>
-				    <td width=150px></td>
-				    <td valign="Top"></td>
+				    <td width=350px valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br>La Trobe University<br>Co-supervised with Prof <a href="https://scholars.latrobe.edu.au/display/bduh" target="_blank" rel="nofollow">Henry DUH</a><br><br>06/2019 - Present</td>
+	
+				    <td width=150px><img border="0" src="media/shuying.jpg" width=100px /></td>
+				    <td width=350px valign="Top"><a href="https://yschen.site/" target="_blank" rel="nofollow"><b>Shuying (Susan) CHEN</b></a><br>Hong Kong University of Science and Technology<br>Co-advised with Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit YEUNG</a><br><br>08/2019 - Present</td>
+
 				</tr>
 			</table>
 
@@ -92,9 +94,9 @@ ga('send', 'pageview');
 	  		<table style="text-align:left">
 	    		<tr>
 				    <td width=150px><img border="0" src="media/gang.jpg" width=100px /></td>
-				    <td valign="Top"><b>Gang YU</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
+				    <td width=350px valign="Top"><b>Gang YU</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
 				    <td width=150px><img border="0" src="media/yawen.jpg" width=100px /></td>
-				    <td valign="Top"><b>Yawen ZHENG</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
+				    <td width=350px valign="Top"><b>Yawen ZHENG</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
 				</tr>
 			</table>
 
