Update team page

--- a/team.html
+++ b/team.html
@@ -81,8 +81,8 @@ ga('send', 'pageview');
 				    <td width=150px><img border="0" src="media/yunzhan.jpg" width=100px /></td>
 				    <td width=350px valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br>La Trobe University<br>Co-supervised with Prof <a href="https://scholars.latrobe.edu.au/display/bduh" target="_blank" rel="nofollow">Henry DUH</a><br><br>06/2019 - Present</td>
 	
-				    <td width=150px><img border="0" src="media/shuying.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><a href="https://yschen.site/" target="_blank" rel="nofollow"><b>Shuying (Susan) CHEN</b></a><br>Hong Kong University of Science and Technology<br>Co-advised with Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit YEUNG</a><br><br>08/2019 - Present</td>
+				    <td width=150px><img border="0" src="media/yingshu.jpg" width=100px /></td>
+				    <td width=350px valign="Top"><a href="https://yschen.site/" target="_blank" rel="nofollow"><b>Yingshu (Susan) CHEN</b></a><br>Hong Kong University of Science and Technology<br>Co-advised with Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit YEUNG</a><br><br>08/2019 - Present</td>
 
 				</tr>
 			</table>
