--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@ ga('send', 'pageview');
 
 			<br>
 
-			<h6>Visiting Students</h6>
+			<!--<h6>Visiting Students</h6>
 
 	  		<table style="text-align:left">
 	    		<tr>
@@ -97,6 +97,17 @@ ga('send', 'pageview');
 				    <td width=350px valign="Top"><b>Gang YU</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
 				    <td width=150px><img border="0" src="media/yawen.jpg" width=100px /></td>
 				    <td width=350px valign="Top"><b>Yawen ZHENG</b><br>Tsinghua University<br>Undergraduate<br><br>07/2019 - Present</td>
+				</tr>
+			</table>-->
+
+			<h6>Alumni</h6>
+
+	  		<table style="text-align:left">
+	    		<tr>
+				    <td width=150px><img border="0" src="media/gang.jpg" width=100px /></td>
+				    <td width=350px valign="Top"><b>Gang YU</b><br>Visiting Student<br>Tsinghua University<br><br>07/2019 - 09/2019</td>
+				    <td width=150px><img border="0" src="media/yawen.jpg" width=100px /></td>
+				    <td width=350px valign="Top"><b>Yawen ZHENG</b><br>Visiting Student<br>Tsinghua University<br><br>07/2019 - 09/2019</td>
 				</tr>
 			</table>
 
