--- a/team.html
+++ b/team.html
@@ -105,9 +105,9 @@ ga('send', 'pageview');
 	  		<table style="text-align:left">
 	    		<tr>
 				    <td width=150px><img border="0" src="media/gang.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><b>Gang YU</b><br>Visiting Student<br>Tsinghua University<br><br>07/2019 - 09/2019</td>
+				    <td width=350px valign="Top"><b>Gang YU</b><br>Visiting Student<br>Tsinghua University</td>
 				    <td width=150px><img border="0" src="media/yawen.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><b>Yawen ZHENG</b><br>Visiting Student<br>Tsinghua University<br><br>07/2019 - 09/2019</td>
+				    <td width=350px valign="Top"><b>Yawen ZHENG</b><br>Visiting Student<br>Tsinghua University</td>
 				</tr>
 			</table>
 
