--- a/team.html
+++ b/team.html
@@ -79,10 +79,10 @@ ga('send', 'pageview');
 	  		<table style="text-align:left">
 	    		<tr>
 				    <td width=150px><img border="0" src="media/yunzhan.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br>La Trobe University<br>Co-supervised with Prof <a href="https://scholars.latrobe.edu.au/display/bduh" target="_blank" rel="nofollow">Henry DUH</a><br><br>06/2019 - Present</td>
+				    <td width=350px valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br>La Trobe University<br>Co-supervised with Prof <a href="https://scholars.latrobe.edu.au/display/bduh" target="_blank" rel="nofollow">Henry DUH</a><br><br>Since June 2019</td>
 	
 				    <td width=150px><img border="0" src="media/yingshu.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><a href="https://yschen.site/" target="_blank" rel="nofollow"><b>Yingshu (Susan) CHEN</b></a><br>Hong Kong University of Science and Technology<br>Co-advised with Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit YEUNG</a><br><br>08/2019 - Present</td>
+				    <td width=350px valign="Top"><a href="https://yschen.site/" target="_blank" rel="nofollow"><b>Yingshu (Susan) CHEN</b></a><br>Hong Kong University of Science and Technology<br>Co-advised with Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit YEUNG</a><br><br>Since August 2019</td>
 
 				</tr>
 			</table>
