--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@ ga('send', 'pageview');
 	<script src="js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 
 
-    <title>Tian (Frank) FENG</title>
+    <title>Tian (Frank) Feng @ La Trobe - Team</title>
   </head>
 
 <body>
@@ -50,7 +50,7 @@ ga('send', 'pageview');
 
     	<div id="header">
         <!--h1 id="logo"><a href="#" title="#">yourweb<span>.com</span></a></h1-->
-	        <h1 id="logo"><a href="index.html" title="Home">Frank FENG</span></a></h1>
+	        <h1 id="logo"><a href="index.html" title="Home">Tian FENG</span></a></h1>
 	        <hr class="noscreen" />
 
 	        <div id="navigation">
@@ -72,17 +72,17 @@ ga('send', 'pageview');
   		</div>
 
     	<div id="main">
-    		It is my great pleasure to work with a research team full of passion, talent and creativity.
+    		It is my great pleasure to work with a research team full of passion, talent, and creativity.
 
-			<h6>PhD Students</h6>
+			<h6>Research Students</h6>
 
 	  		<table style="text-align:left">
-	    		<tr>
-				    <td width=150px><img border="0" src="media/yunzhan.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br>La Trobe University<br>Co-supervised with Prof <a href="https://scholars.latrobe.edu.au/display/bduh" target="_blank" rel="nofollow">Henry DUH</a><br><br>Since June 2019</td>
-	
+	    		<tr>	
 				    <td width=150px><img border="0" src="media/yingshu.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><a href="https://yschen.site/" target="_blank" rel="nofollow"><b>Yingshu (Susan) CHEN</b></a><br>Hong Kong University of Science and Technology<br>Co-advised with Prof <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit YEUNG</a><br><br>Since August 2019</td>
+				    <td width=350px valign="Top"><a href="https://yschen.site/" target="_blank" rel="nofollow"><b>Yingshu (Susan) CHEN</b></a><br><br>Ph.D. Student<br>Hong Kong University of Science and Technology<br>Co-advised with Prof. <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit YEUNG</a></td>
+
+				    <td width=150px></td>
+				    <td width=350px valign="Top"></td>
 
 				</tr>
 			</table>
@@ -105,9 +105,13 @@ ga('send', 'pageview');
 	  		<table style="text-align:left">
 	    		<tr>
 				    <td width=150px><img border="0" src="media/gang.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><b>Gang YU</b><br>Visiting Student<br>Tsinghua University</td>
+				    <td width=350px valign="Top"><b>Gang YU</b><br><br>Visiting Undergraduate Student<br>Tsinghua University, China</td>
 				    <td width=150px><img border="0" src="media/yawen.jpg" width=100px /></td>
-				    <td width=350px valign="Top"><b>Yawen ZHENG</b><br>Visiting Student<br>Tsinghua University</td>
+				    <td width=350px valign="Top"><b>Yawen ZHENG</b><br><br>Visiting Undergraduate Student<br>Tsinghua University, China</td>
+				</tr>
+				<tr>
+					<td width=150px><img border="0" src="media/yunzhan.jpg" width=100px /></td>
+				    <td width=350px valign="Top"><a href="http://yunzhanzhou.com/" target="_blank" rel="nofollow"><b>Yunzhan ZHOU</b></a><br><br>Visiting Graduate Student<br>Zhejiang University, China</td>
 				</tr>
 			</table>
 
