--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ ga('send', 'pageview');
 	<script src="js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 
 
-    <title></title>
+    <title>Tian (Frank) FENG @ La Trobe</title>
   </head>
 
 <body>
@@ -50,12 +50,21 @@ ga('send', 'pageview');
 
       <div id="header">
         <!--h1 id="logo"><a href="#" title="#">yourweb<span>.com</span></a></h1-->
-
+        <h1 id="logo"><a href="index.html" title="Home">Tian FENG</span></a></h1>
         <hr class="noscreen" />
 
         <div id="navigation">
         <ul>
+          <li><a href="index.html" title="Home">HOME</a></li>
 
+          <li><a href="team.html" title="Team">TEAM</a></li>
+<!--          <li><a href="cn/index.html" title="Research">中文版</a></li>
+          <li><a href="service.html" title="Services">SERVICES</a></li>
+          <li><a href="teaching.html" title="Teaching">TEACHING</a></li>
+          <li><a href="honors.html" title="Honors">HONORS</a></li>	  
+          <li><a href="demo.html" title="Demo">DEMOS</a></li>
+          <li><a href="about.html" title="About">ABOUT</a></li>
+-->
         </ul>
         </div>
 	
@@ -67,7 +76,92 @@ ga('send', 'pageview');
         <div id="main">
 
 
+		<table>
+		<tr>
+			<td width="250">
+				<table>
+				<td>
+				<tr> 
+					<img border="0" src="media/tian.jpg" width=150px />
+					<!--div class="padded10"-->
+				</tr>
+				<!--tr>
+					<img border="0" src="media/name.png" style="display:block;" />
+					<div class="padded10">
+				</tr-->
+
+				</td>
+				</table>
+			</td>
+
+
+			<td width="1700">
+				<table>
+				<td>
+				<tr>
+					<span style="border-collapse:separate">
+					<div style="display:block;text-align:left"><strong><font size="4">Tian (Frank) FENG</font></strong></div>
+					<div style="display:block;text-align:left"><font size="font-size:small">Lecturer (Assistant Professor)</font></div>
+					<div style="display:block;text-align:left"><span style="font-size:small"><a href="https://www.latrobe.edu.au/computer-science-and-information-technology/" style="text-decoration:underline" target="_blank" rel="nofollow">Department of Computer Science and Information Technology</a></span></div>
+					<div style="display:block;text-align:left"><span style="font-size:small"><a href="https://www.latrobe.edu.au/school-engineering-and-mathematical-sciences/" style="text-decoration:underline" target="_blank" rel="nofollow">School of Engineering and Mathematical Sciences</a></span></div>
+					<div style="display:block;text-align:left"><span style="font-size:small"><a href="https://www.latrobe.edu.au/" style="text-decoration:underline" target="_blank" rel="nofollow">La Trobe University</a></span></div>
+
+					<div class="padded10">
+					<div style="display:block;text-align:left"><font style="font-size:small">Email: t.feng [AT] latrobe [DOT] edu [DOT] au</font></div>
+					<div style="display:block;text-align:left"><font style="font-size:small">Office: Room 307, Thomas Cherry Building (TC), Bundoora Campus</font></div>
+
+					</span>
+				</tr>
+				</td>
+				</table>
+			</td>
+
+			<td valign="middle" align="right"  width="300">
+
+			<!--center><img height=120 border="0" src="./img/08.png"></center-->
+			<center><img height=180 border="0" src="media/logos.png"></center>
+
+<!--
+				<img height= 200 border="0" src="./img/08.png">
+<br>
+<br>
+<br>
+<br>
+-->
+			</td>
+		</tr>
+		</table>
+
+		<!--<h6>Short Bio</h6>-->
+		<p>I am now serving as a Lecturer (Assistant Professor) in Interactive Digital Media at <a href="https://www.latrobe.edu.au/">La Trobe University</a>, Australia. Before joining La Trobe, I was a Postdoctoral Fellow at the <a href="http://epicentre.matters.today/" target="_blank" rel="nofollow">University of New South Wales</a> (UNSW) and a visiting scientist at <a href="https://www.data61.csiro.au/" target="_blank" rel="nofollow">CSIRO's Data61</a>. I earned my Ph.D. degree in Information Systems Technology and Design from <a href="https://www.sutd.edu.sg/" target="_blank" rel="nofollow">Singapore University of Technology and Design</a> (SUTD), advised by Prof. <a href="http://www.saikit.org/" target="_blank" rel="nofollow">Sai-Kit Yeung</a> and Prof. <a href="https://craigyuyu.github.io/home/index.html" target="_blank" rel="nofollow">Craig Yu</a>. I received my bachelor's degree in GIS from <a href="https://www.zju.edu.cn/english/" target="_blank" rel="nofollow">Zhejiang University</a>  (ZJU), and was a visiting scholar at <a href="https://www.umb.edu/" target="_blank" rel="nofollow">UMass Boston</a> during my PhD study.</p>
+
+		<!--<p>I received generous support from CSIRO, DST Group, UNSW and SUTD.</p>-->
+
+		<p>I am interested in <b>AI-based Data-driven Techniques for Computational Design, Graphics and Vision</b>, especially those topics about Urban Modeling and Percpetion.			
 		
+		<!--<p>*Please check <a href=recruit.html>this</a> out if you are interested in joining our team.</p>-->
+
+
+		<!--h4>News</h4>
+		<div>
+		<span>I will present our CVPR paper, "Shading-based Shape Refinement of RGB-D images at CVPR'13"</span><br />
+		</div-->
+
+		<h6>News</h6>
+<!--
+		<ul class="noindent">
+		  <li>Our paper <a href="http://www.scenenn.net" target="_blank" rel="nofollow" style="text-decoration: none">"SceneNN: a Scene Meshes Dataset with aNNotations"</a> has been conditionally accepted as an Oral Paper by <b>3DV 2016</b>. 
+				<ul>
+				<li><tf3>we will provide 100+ real-world scene meshes with annotations; stay tuned on our <a href="http://www.scenenn.net" target="_blank" rel="nofollow">project website</a>.</tf3></li>
+
+				<li><tf3>our paper received the <font color="#32880A">Best Paper Honorable Mention Award</font></tf2>. Congratulations to the team!</tf3></li>
+				</ul>
+
+			</li>
+
+		 
+
+		  </ul>-->		  
 
 
 
